[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/levels/level_boss.gd" type="Script" id=3]
[ext_resource path="res://scenes/enemies/boss.tscn" type="PackedScene" id=4]
[ext_resource path="res://visual/dream one new.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/levels/win.gd" type="Script" id=6]
[ext_resource path="res://scenes/screens/parallax_bg.tscn" type="PackedScene" id=8]

[sub_resource type="SegmentShape2D" id=1]
b = Vector2( 0, 600 )

[sub_resource type="SegmentShape2D" id=2]
b = Vector2( 1028, 0 )

[sub_resource type="SegmentShape2D" id=3]
b = Vector2( 1028, 0 )

[sub_resource type="SegmentShape2D" id=4]
b = Vector2( 0, 600 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=6]
resource_name = "win"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="main" type="Node2D"]
script = ExtResource( 3 )
next_level = "res://scenes/screens/main_menu.tscn"

[node name="parallax_bg" parent="." instance=ExtResource( 8 )]

[node name="border" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="border"]
collision_layer = 2
collision_mask = 7
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/StaticBody2D"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D3" type="CollisionShape2D" parent="border/StaticBody2D"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D4" type="CollisionShape2D" parent="border/StaticBody2D"]
position = Vector2( 1028, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="border/StaticBody2D"]
position = Vector2( 0, 600 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 103.383, 142.339 )
collision_mask = 3

[node name="lastboundary" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="lastboundary"]
collision_layer = 8
collision_mask = 31

[node name="CollisionShape2D5" type="CollisionShape2D" parent="lastboundary/StaticBody2D"]
position = Vector2( -192, 0 )
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ui" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="BossHealth" type="ProgressBar" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -131.0
margin_top = 47.9524
margin_right = 131.0
margin_bottom = 76.9524
max_value = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.0
margin_right = 90.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
text = "BOSS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="win" type="Control" parent="CanvasLayer"]
pause_mode = 2
margin_right = 1031.0
margin_bottom = 612.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/win"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/win"]
anims/win = SubResource( 6 )

[node name="boss_boss" type="Node2D" parent="."]
position = Vector2( 800, 290 )

[node name="boss" parent="boss_boss" instance=ExtResource( 4 )]
scale = Vector2( 0.2, 0.2 )

[connection signal="animation_finished" from="CanvasLayer/win/AnimationPlayer" to="CanvasLayer/win" method="_on_AnimationPlayer_animation_finished"]
[connection signal="summon_enemy" from="boss_boss/boss" to="." method="_on_boss_summon_enemy"]
